--- a/TestMVC/Test/Index.cshtml
+++ b/TestMVC/Test/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Core.Entities.Shift>
+﻿@model IEnumerable<Core.Entity.MedicineBill>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,10 +13,13 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ShiftName)
+                Mã bác sĩ
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Time)
+                Ngày tạo
+            </th>
+            <th>
+               Tình trạng thanh toán
             </th>
             <th></th>
         </tr>
@@ -25,15 +28,18 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.ShiftName)
+                @Html.DisplayFor(modelItem => item.DoctorID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Time)
+                @item.DateCreate.ToString("dd/MM/yyyy")
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.IdShift">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdShift">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdShift">Delete</a>
+                    @(item.PayStatus == false ? "Chưa thanh toán" : "Đã thanh toán")
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
