--- a/TestMVC/Test/Delete.cshtml
+++ b/TestMVC/Test/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Entity.MedicineBill
+﻿@model Core.Entities.Shift
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,31 +8,25 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>MedicineBill</h4>
+    <h4>Shift</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            Id bác sĩ
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ShiftName)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DoctorID)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ShiftName)
         </dd>
-        <dt class="col-sm-2">
-            Ngày tạo
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Time)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DateCreate)
-        </dd>
-        <dt class="col-sm-2">
-            Tình trạng thanh toán
-        </dt>
-        <dd class="col-sm-10">
-            @(Model.PayStatus == false ? "Chưa thanh toán" : "Đã thanh toán")
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Time)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="IdShift" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
