--- a/TestMVC/Test/Details.cshtml
+++ b/TestMVC/Test/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Entity.MedicineBill
+﻿@model Core.Entities.Shift
 
 @{
     ViewData["Title"] = "Details";
@@ -7,30 +7,24 @@
 <h1>Details</h1>
 
 <div>
-    <h4>MedicineBill</h4>
+    <h4>Shift</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            Id bác sĩ
+            @Html.DisplayNameFor(model => model.ShiftName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DoctorID)
+            @Html.DisplayFor(model => model.ShiftName)
         </dd>
         <dt class = "col-sm-2">
-            Ngày tạo
+            @Html.DisplayNameFor(model => model.Time)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateCreate)
-        </dd>
-        <dt class = "col-sm-2">
-            Tình trạng thanh toán
-        </dt>
-        <dd class = "col-sm-10">
-            @(Model.PayStatus == false ? "Chưa thanh toán" : "Đã thanh toán")
+            @Html.DisplayFor(model => model.Time)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.IdShift">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
