--- a/TestMVC/Test/Index.cshtml
+++ b/TestMVC/Test/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Core.Entity.MedicineBill>
+﻿@model IEnumerable<Core.Entities.Shift>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,13 +13,10 @@
     <thead>
         <tr>
             <th>
-                Mã bác sĩ
+                @Html.DisplayNameFor(model => model.ShiftName)
             </th>
             <th>
-                Ngày tạo
-            </th>
-            <th>
-               Tình trạng thanh toán
+                @Html.DisplayNameFor(model => model.Time)
             </th>
             <th></th>
         </tr>
@@ -28,18 +25,15 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.DoctorID)
+                @Html.DisplayFor(modelItem => item.ShiftName)
             </td>
             <td>
-                @item.DateCreate.ToString("dd/MM/yyyy")
+                @Html.DisplayFor(modelItem => item.Time)
             </td>
             <td>
-                    @(item.PayStatus == false ? "Chưa thanh toán" : "Đã thanh toán")
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.IdShift">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.IdShift">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.IdShift">Delete</a>
             </td>
         </tr>
 }
